--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@apollo/gateway": "^2.8.2",
     "@apollo/subgraph": "^2.8.2",
+    "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/apollo": "^12.1.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.2",
@@ -31,10 +32,14 @@
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.16.1",
     "@types/bcrypt": "^5.0.2",
+    "@types/ejs": "^3.1.5",
     "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "ejs": "^3.1.10",
     "express": "^4.19.2",
     "graphql": "^16.9.0",
+    "nodemailer": "^6.9.14",
     "prisma": "^5.16.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
