--- a/server/apps/users/tsconfig.app.json
+++ b/server/apps/users/tsconfig.app.json
@@ -2,7 +2,11 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "declaration": false,
-    "outDir": "../../dist/apps/users"
+    "outDir": "../../dist/apps/users",
+    "baseUrl": ".",
+    "paths": {
+      "@user/*": ["./src/*"]
+    }
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "test", "**/*spec.ts"]
