--- a/client/user-ui/package.json
+++ b/client/user-ui/package.json
@@ -9,13 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.10.8",
     "@hookform/resolvers": "^3.9.0",
     "@nextui-org/react": "^2.4.2",
+    "@types/js-cookie": "^3.0.6",
     "framer-motion": "^11.2.13",
+    "graphql": "^16.9.0",
+    "js-cookie": "^3.0.5",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "zod": "^3.23.8"
   },
