--- a/server/package.json
+++ b/server/package.json
@@ -36,6 +36,7 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cloudinary": "^2.2.0",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "graphql": "^16.9.0",
