--- a/server/apps/users/Dockerfile
+++ b/server/apps/users/Dockerfile
@@ -8,6 +8,8 @@ RUN npm install
 
 COPY . .
 
+RUN npx prisma generate --schema=./apps/users/prisma/schema.prisma
+
 RUN npm run build
 
 CMD ["node", "dist/apps/users/main"]
