--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -3,6 +3,7 @@ services:
     build:
       context: .
       dockerfile: ./apps/users/Dockerfile
+    image: xuantho2811/api-user
     command: npm run start users
     env_file:
       - ./apps/users/.env
@@ -13,6 +14,7 @@ services:
       context: .
       dockerfile: ./apps/restaurants/Dockerfile
     command: npm run start restaurants
+    image: xuantho2811/api-restaurant
     env_file:
       - ./apps/restaurants/.env
     ports:
@@ -22,8 +24,9 @@ services:
       context: .
       dockerfile: ./apps/gateway/Dockerfile
     command: npm run start
+    image: xuantho2811/api-gateway
     ports:
-      - '3000:3000'
+      - '1234:1234'
     depends_on:
       - users
       - restaurants
