--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,6 @@
 services:
   users:
+    platform: linux/amd64
     build:
       context: .
       dockerfile: ./apps/users/Dockerfile
@@ -10,6 +11,7 @@ services:
     ports:
       - '4001:4001'
   restaurants:
+    platform: linux/amd64
     build:
       context: .
       dockerfile: ./apps/restaurants/Dockerfile
@@ -20,6 +22,7 @@ services:
     ports:
       - '4000:4000'
   gateway:
+    platform: linux/amd64
     build:
       context: .
       dockerfile: ./apps/gateway/Dockerfile
