--- a/server/apps/users/Dockerfile
+++ b/server/apps/users/Dockerfile
@@ -10,6 +10,6 @@ COPY . .
 
 RUN npx prisma generate --schema=./apps/users/prisma/schema.prisma
 
-RUN npm run build
+RUN npm run build users
 
 CMD ["node", "dist/apps/users/main"]
