--- a/server/apps/restaurants/Dockerfile
+++ b/server/apps/restaurants/Dockerfile
@@ -10,6 +10,6 @@ COPY . .
 
 RUN npx prisma generate --schema=./apps/restaurants/prisma/schema.prisma
 
-RUN npm run build
+RUN npm run build restaurants
 
-# CMD ["node", "dist/apps/restaurants/main"]
+CMD ["node", "dist/apps/restaurants/main"]
